--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.16.7",
     "frontend": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
