--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
