--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "lucide-react": "^0.436.0",
+    "next": "^14.2.7",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
