--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "lucide-react": "^0.436.0",
+    "next": "^14.2.7",
+    "nextjs-toploader": "^3.6.15",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
-    "formik": "^2.4.6",
+    "@fontsource/roboto": "^5.0.14",
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.1.11",
+    "formik": "^2.4.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
