--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
+    "react-hook-form": "^7.53.0",
     "react-scroll": "^1.9.0",
     "swiper": "^11.1.11",
     "formik": "^2.4.6",
