--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "aos": "^2.3.4",
+    "formik": "^2.4.6",
+    "frontend": "file:",
     "lucide-react": "^0.436.0",
     "next": "^14.2.7",
     "nextjs-toploader": "^3.6.15",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
-    "@fontsource/roboto": "^5.0.14",
-    "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "swiper": "^11.1.11",
-    "formik": "^2.4.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
