--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -30,5 +30,5 @@
     "noErrorTruncation": true,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src", ".vscode/conflictus/LoginForm", ".vscode/conflictus/TestimonialSection", ".vscode/conflictus/LoginForm2", "src/screens/about"]
 }
