--- a/server/.env_example
+++ b/server/.env_example
@@ -1,4 +1,9 @@
 PORT=5001
+
 DB_USER=root
 DB_PASSWORD=root
-DB_HOST=localhost:3308
+DB_HOST=localhost
+DB_PORT=3308
+DB_NAME=devconnect
+
+JWT_SECRET=MatchPrograming
