--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@react-spring/web": "^9.7.4",
     "aos": "^2.3.4",
     "formik": "^2.4.6",
     "frontend": "file:",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
+    "react-tinder-card": "^1.6.4",
     "swiper": "^11.1.11",
     "yup": "^1.4.0"
   },
